--- a/res/pub/front/resource/css/wadiz.mob.css
+++ b/res/pub/front/resource/css/wadiz.mob.css
@@ -179,6 +179,7 @@
 .step-section .step-inner {width:100%;}
 .step-section .step-inner + .step-inner {margin-left:0;margin-top:60px;}
 .step-list .step-item {margin-top:30px;border:0;}
+.step-list .step-item .step-txt-box {width:100%;}
 .step-list .step-item .step-icon {display:none;}
 .step-list .step-item .num,
 .step-list .step-item .step-txt {display:block;text-align:center;font-size:18px;}
