--- a/res/pub/front/resource/css/wadiz.mob.css
+++ b/res/pub/front/resource/css/wadiz.mob.css
@@ -248,6 +248,10 @@ input[type='text'], input[type='password'], input[type='tel'] {height:40px}
 .not-pc {display:block}
 .btn-type.not-pc {display:inline-block}
 
+/* 2020-04-27 add */
+.address {display:flex;flex-direction:column;font-size:10px;line-height:20px}
+.address .footer-logos {margin:10px 0 0 0}
+
 
 @media (max-width:360px) {
 	.layer_section .layer_section-container {width:300px}
