--- a/res/pub/front/resource/css/wadiz.mob.css
+++ b/res/pub/front/resource/css/wadiz.mob.css
@@ -8,7 +8,8 @@
 .select-box:after {background-position:-100px -60px;width: 15px;height: 8px;}
 .btn-type {height:48px;line-height:46px;padding:0 15px;font-weight:400;font-size:15px;letter-spacing:-1px}
 .btn-move-top {width:70px;height:69px;bottom:20px;margin-left:0;right:20px;left:auto;background-position:-50px -140px;}
-.radio .fake-radio {width:12px;height:12px;margin-right:4px;background-position:-200px -140px;}
+.radio .fake-radio {width:12px;height:12px;margin-right:4px;background-position:-200px -140px;top:3px}
+.radio label {padding-left:16px}
 .radio input[type="radio"]:checked + .fake-radio { background-position-x: -220px;}
 .fb-menu-box {right:35px;}
 .fb-menu-box #fp-menu .fp-menu-item:not(:last-child) {margin-bottom:10px;}
@@ -173,12 +174,12 @@
 
 .recruit-section {padding:50px 0;}
 .tab-list .tab-item {width:110px;height:40px;}
-.tab-list .tab-item .tab-link {font-size:15px;}
+.tab-list .tab-item .tab-link {font-size:15px;line-height:38px}
 
 .step-section {flex-direction:column;margin:45px 0 80px;}
 .step-section .step-inner {width:100%;}
 .step-section .step-inner + .step-inner {margin-left:0;margin-top:60px;}
-.step-list .step-item {margin-top:30px;border:0;}
+.step-list .step-item {margin-top:30px;border:0;width:100%;float:none !important;}
 .step-list .step-item .step-txt-box {width:100%;}
 .step-list .step-item .step-icon {display:none;}
 .step-list .step-item .num,
@@ -186,7 +187,7 @@
 .step-list .step-item .num {margin-bottom:5px;font-weight:500;color:#00cccc;}
 .step-list .step-item .step-txt {}
 
-.guide-list .guide-item {line-height:1.4;}
+.guide-list .guide-item {line-height:1.4;font-size:13px}
 
 .search-section {margin:30px 0 45px;}
 .search-box {padding:0 9px;}
