--- a/res/pub/front/resource/css/wadiz.mob.css
+++ b/res/pub/front/resource/css/wadiz.mob.css
@@ -260,7 +260,36 @@ input[type='text'], input[type='password'], input[type='tel'] {height:40px}
 
 
 
+/* [20201118] version2 */
+#header.v2 { min-height:60px; background:#fff; }
+#header.v2:before {top:59px; background-color:#d4d4d4;}
+#header.v2 .recruit-log,
+#header.v2:hover .recruit-log {width:110px; }
+#header.v2 .recruit-log { margin-top:20px; }
 
+/* footer */
+#footer.v2 .footer-logo { width:90px; height:20px; background-position-x:-45px; }
+.v2 .address .name { margin-top:20px; }
 
+.v2 .sp_wadiz, .v2 .sp_wadiz-a::after, .v2 .sp_wadiz-b::before { background-size:250px auto; }
+.v2 .recruit-section { padding:50px 20px; }
 
+/* content */
+.v2 .sub-visual-section.recruit { margin-top:60px; height:0; padding-top:58%;  background-position:50% center; max-height:250px; }
+.intro-title .tag { font-size:14px; }
+.intro-title .title { margin-top:15px; font-size:21px; }
+.intro-area { display:block; }
+.intro-area .intro-cont { padding:35px 0 0; }
 
+.bul-dot > li { font-size:14px; }
+.bul-star { margin-top:25px; font-size:12px; }
+
+.process-area { margin:30px 0 80px; }
+.process-list { flex-direction:column; }
+.process-list > li { width:30%; padding-top:30%; min-width:110px; min-height:110px; margin:3%; font-size:16px; }
+.process-list > li.primary,
+.process-list > li.secondary { width:35%; padding-top:35%; min-width:130px; min-height:130px; }
+.process-list:before { top:5%; bottom:5%; left:50%; right:auto; width:1px; height:auto; }
+.process-list > li span { padding:0 20px; }
+
+.v2 .detail-area .detail-date { left:20px; }
